@@ -1,7 +1,7 @@
 public class Board 
 {
 	private Piece[][] m_board;
-	
+
 	Board()
 	{
 		init();
@@ -12,43 +12,48 @@ public class Board
 		m_board = new Piece[Definitions.NUMROWS][Definitions.NUMCOLS];
 		//we don't put pieces on board, because game may have different set-up
 	}
-	
+
+	public boolean isLegalSquare(int row, int col)
+	{
+		return ((row >= 0) && (row < Definitions.NUMROWS) && (col >= 0) && (col < Definitions.NUMCOLS));
+	}
+
 	public void placePiece(Piece p, int row, int col)
 	{
 		//need to consider: should we check if location is already occupied
 		//	or should that be up to the caller?
-		
+		// - Probably up to caller
+
 		m_board[row][col] = p;
 		p.setPos(row, col); //in case it wasn't already done for us
 	}
 
 	public Piece getPiece(int row, int col)
 	{
-		//stub; still have to check for bad input for row and col
-		return m_board[row][col];
+		if (isLegalSquare(row, col))
+		{
+			return m_board[row][col];
+		}
+		else
+		{
+			return null;
+		}
 	}
 
 	public void move(Move m)
 	{
 		//should we check for legality or should we assume that it has already been checked?
 		//probably should assume, since only Game class knows legality rules
-		
+
 		Piece temp = m_board[m.r0][m.c0];
 		m_board[m.r0][m.c0] = null;
 		m_board[m.rf][m.cf] = temp;
 	}
 
-	public boolean inCheck(Definitions.Color color)
-	{
-		//this will check to see if the king of 'color' is threatened or not
-		
-		return false; //stub
-	}
-	
 	public String toString()
 	{	//prints board position
 		String pic = ""; //ugly variable name, needs better name
-		
+
 		for (int r = 0; r < Definitions.NUMROWS; r++)
 		{
 			for (int c = 0; c < Definitions.NUMCOLS; c++)
@@ -66,12 +71,12 @@ public class Board
 		}		
 		return pic;
 	}
-	
+
 	public static boolean isLegal(int r, int c) //checks if square is within bounds of board
 	{
 		return ((r >= 0) && (r < Definitions.NUMROWS) && (c >= 0) && (c < Definitions.NUMCOLS));
 	}
 
 	//What else does a board need to have?
-	
+
 }
